# QuickChat

./: .gitignore  CMakeLists.txt  README.md
QCClient/: CMakeLists.txt  main.cpp
QCNetwork/: CMakeLists.txt
QCNetwork/include/QCNetwork/: TCPConnection.h  TCPServer.h  base.h
QCNetwork/include/QCNetwork/client/: TCPClient.h
QCNetwork/include/QCNetwork/server/: TCPConnection.h  TCPServer.h
QCNetwork/src/: TCPConnection.cpp  TCPServer.cpp  base.cpp
QCNetwork/src/client/: TCPClient.cpp
QCNetwork/src/server/: TCPConnection.cpp  TCPServer.cpp
QCserver/: CMakeLists.txt  main.cpp
